create github pages

--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 40%;">
-                <img src="assets/images/nov-22-sophie-crites-wca-sowae-404x539.jpg" alt="Mobirise" title="">
+                <img src="assets/images/december-6-2019-sowae-760x1013.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,12 +182,12 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Sophie Crites!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Alecia Hodge!
 <br>
-<br>Sophie is a sophomore at Will Carleton Academy (WCA). She remains active in volleyball and basketball. She also participates in Hunter/Jumper Equestrian Competitions. <br>
-<br>According to WCA High School History teacher, Garvin Kruse, “[Sophie] brings a ray of sunshine to my class each day, and she truly seems focused on doing the ‘right thing.’ Additionally, she has shown terrific improvement in the classroom, putting forth an impressive performance in the always challenging Western Civ..” <br>
-<br>Sophie plans to attend college to study Veterinary Science following graduation.
-<br><br>Congratulations, Sophie. <br>
+<br>Alecia is a sophomore at Will Carleton Academy (WCA). She remains active in yearbook, band, volleyball, track and field, bowling, and basketball. She also volunteers to do face painting at community events. <br>
+<br>According to WCA High School History teacher, Garvin Kruse, “[Alecia] comes to class ready to learn and with a comment or story to lighten the mood. I am blown away by the way she is handling the challenging curriculum of Western Civilization. Hard work pays off!” <br><br>Alecia plans to attend college to become a middle school teacher following graduation.
+<br>
+<br>Congratulations, Alecia. <br>
 <br>Keep up the great work!<br></p>
                             </div>
                         </div>
