--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mtsTHCk9a7ZyfpkvmeZeQEZEWCqxZcFSQR13ahimdPam46zjc52p2pf9umWorA/ZmqMM8VMX4qGBTYHX5JVkMLA3oIwvQrQnP+QwcKK2PgcCsAu5uwg6S+jqMV1QLbmG">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fuzcY71qpWySo2M1yRc4Yzm3+kfotwNm7Y7ab71EISOgyNte9ZAeoDk6JkLYCS0lvR6zyABqRTowt2m8AaFV2pe2g2DpkBRn0J1+ie1RF5PiQrUVwd4OOOCgevBOA5LL">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
