--- a/ben.html
+++ b/ben.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qeS9IvVZQx7QzW55X6KkF26nSUZDFRXMvu0yvU9eZm46JtVKSOeu0evL+Hp2gmBiOwco1RLch7eImT/E/OTax/+1xneBG70hsS3vP5Aeu3cvYz8k1fXVuXz+VHNkvgD4">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ylalq650P0dY4xciBpIc4Uuz+o/riJpZcX9UCLnYZH8bwEv7T/rZ7ajzQKw/YVGk00NZGBcjYZT5dRBuzXtc1CWHc0naRh17H3QggDrrrpaEHB6cxC3XzrSfB9iawFl/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
