--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cSbZtRFWRxjyQLZzbkRVOGng5VnnQz88G5earl5MTxSFTioZbAdvJYidGkSVaOjip1YcY6HqE7kEs1MeqbP9TBC3A60PF3bLWQn1xxvjLhTXjIpmSvIKZcqb/FYlEwbo">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ATRFw259HRG+eZIYuIEHS7MF9yX7+iSHdW7WTjDLS6g9DZDFmyxLPyZnxpNnIfjbnRWne7gol/jAeRdAPkwraKbEzdwS3cOb0Pc4PUvKNkiqPCcGoU2fOIMWBiKevBIa">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
