--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DvMIrCj/6dH0rqk2lgn1iD4MDjZPRYNYK5kFwiBaQbC+6momqws3lNQhLZo9dd6ZSTTMCvIpsZvj0IUeanA4bkI6UeH8Gmq7PWD8eMgKaQkOBwtuTdq3+Sy6ZPT9L0al">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QEtFMe1KBfJg+IC63PeC3rLaDQ/EoMQqtTZhfwloKoi4cgYTXgqhbV218w1ZZycOFryu5rm+ifhkrV+DBFXoPbOY+Sl10M+XTK1jZQnUXwuu6ejzfoHOqfDY65MJJcj9">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
