--- a/joe.html
+++ b/joe.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BuqiPnIe6cfqtYX9h7VT1rlVHv/aN+NzTI4ZleNlYETdU0hp9rrERipA7E4hkV/WdD3b7mCzbvZrHiWZxVgbA2bEbLmJt17Z396sat+7MFyJ7yoFmU7+qHDuIPdou8N8">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RGsDTsBjctQ7FOTaJ0qoyfWaJ679WF6RT7G7h0P4kg3G3VsTnfpZ/R2gJNDklVYcM2puyL5WaLRjDmU9YdC5Nyr4o8tb2gYpWWsXRFuSFZ4k6sMVE6kZD03ynhENhyFg">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
