--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uF039NcjqdXr2eifdzgNCRAh2+8gzMhHEZ1/yrdRVPBH/yJXgZ2Wud/TXBc666SsmZ6GbeHPEDcl5EE9zYrXAXZdV/o8irmoUDupV5ewTqNsoFnxVABoLiUpLvdJXpQW">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VU40UCEDzPtRqY7V/iV6aqzruC8E0992clhX/LHIDZ+9jVMkI44NcFp3n9JVJoqyBRgPv+2eELmLA55VF8r3Ppn9rTBKb1C5MmFGxET96ZouClS5ggQfS2VBBxFXoP+9">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
