--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dlYXSiMQHDfoakGupDDZ56yBC/vu5KtBL1VJCelGrXoZAwL2JMcwUWMNvcL6+zYeP7mrJq84BxfVAdszTkZ7bphD5dYHz7VNmsYNMbDR6z+eqvYp9WTpFk+KhHxZXMIK">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HjqtzdbTWi/xjwPNMXnCXhZgi+KftWMbgjdHQMXRZOvY3Byb703e9+vHr4p6rjbI7LCzcqIzFvjBDoJFse/7H/PyPyEVkfG6G7+y4+Xte+pwKhoCwL4z5iIysB2rtm15">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
