--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -103,14 +103,13 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(22, 22, 22);">
     </div>
 
     <div class="container  ">
             <div class="media-container">
                 <div class="col-md-12 align-center">
-                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">
-                        Protecting Your Dreams!</h1>
+                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">PROTECTING YOUR DREAMS!</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-7">
                         Locally owned and operated, Barrett Insurance continues to serve our community since 2001.
                     </p>
@@ -402,7 +401,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tLfuOnuCcrr5H6453DWvICypOLGtbqlNfnO3AGQvDSudkBWfSbDZW8PPrWx3Oia+iMk5gwubKg83Ucue5kjnbu2EN7/8Ef+30uW5DWUKr2jmNevaG9+RYOLZhirdMIkv">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BKO0tU9YIfVc1HOTpNFAEApvH+GfvRSpvKhXgy3JXUn9i1/03uOK9GyzQBhqYTK88tfiy4ByuF9F3zAV2Z/mMfDc8Wx0NrOCgY0c02L0VUnAPo03xP32gxXcRMhv9sil">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
