--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6ofdz7J2uzsce3LJLIJ4vp2FVjxy4XlsR/wh4DGSRF+cDvEnM5AjBelUMZqn84GcJq+d6TP97cTamE1jrKFs/n2jzgPUBxIj9DFmPX6Df6DQsnlogFipwrOZqLxo7hGI">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5bl0RwMPBRvjHz04jI1E1v74cluzr5KSKKP8ENOwxzDP/vOvPmn+ug6gvzIxHCpO81JUwYJRaVQflJ242xWXT1wNYxJjVWPKgNWVtJ8Drq/A2ckCSYgKkkkqjva0VCuO">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
