--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sFwhS/PKWOL3YLlGhZIeARnt4KTXV3yzjusRqm0ffPq4LQw0LQDa+TwRs2uZpZe1csbORme47PrBPZphW5QDiUAXvBwcOeW2Nx+R6WmNMsVjUk3QrIQ4jNZkLaiD1xDt">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m9Lt/daMZqKG9F8heq1VGQVnP4n9uD5rNShIogUXNRN7MUFmw9+TTNGCW/Xr6AOz6yk+gYSCx/861LT4mv+/vJ2sdGDzKVDRnpSOubAjYcvzITnFvBDNKG97CJNsxwaI">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
