--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -164,8 +164,8 @@
         
 
         <div class="media-container-row mt-5 pt-3">
-            <div class="mbr-figure" style="width: 40%;">
-                <img src="assets/images/knapp-katie-paper-735x707.jpg" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 45%;">
+                <img src="assets/images/sara-cole-2019-holly-clark-760x507.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,17 +182,17 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">"Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Kaitlyn Knapp.
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Sara Cole.
 <br>
-<br>Kaitlyn is a senior at Jonesville High School (JHS). She is treasurer of the Student Council and a three year member of Future Farmers of America. Kaitlyn is also a member of the National Honor Society and Future Corps. She athletically participates on the varsity basketball and softball teams. Her hobbies include playing sports, shopping, hunting and creating art.  
+<br>Sara is a senior at Pittsford High School. She is a member of the National Honor Society and Crossroads Farm Youth Ministry. Sara also remains active on the volleyball, basketball, and softball teams.  
+<br><br>According to PHS Dean of Students, Holly Clark, “Sara Cole can brighten anyone's day with her positive attitude and radiant smile!  She strives to do her best in every area of her life.  When there is a need, she is the first to lend a helping hand.  She is a leader among her peers and a role model for the "Little Wildcats" of Pittsford Area Schools.  We are blessed to have her in our community!”
 <br>
-<br>According to her AP Calculus teacher, Joe Williamson, “Katie Knapp is one of the top students in her class at Jonesville High School. Academically she has maintained over a 4.0 GPA while challenging herself with college prep courses. Athletically she is a key member of both the [girl's] basketball team as well as the softball team. As wonderful as she is in the classroom and on the athletic field, it is who Katie is as a person that is most impressive. She is a focused student who has remained humble throughout all of her success. She is always ready to greet you with a big smile on her face, and is someone that her peers can always count on when needed.”
+<br>Upon graduation and completion of the Hillsdale County Early Middle College program, Sara plans to pursue a degree in Business at Siena Heights University.
 <br>
-<br>Next year Kaitlyn plans to attend a four-year university to study pre-health sciences.
+<br>Congratulations, Sara!
 <br>
-<br>Congratulations, Kaitlyn!
-<br>
-<br>Keep up your great work."<br></p>
+<br>Keep up your great work.
+<br></p>
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
 <br>Adrianna Aemisegger<br>Alecia Hodge<br>Alexis Higgins<br>Allyson Rubley,  
-<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Sophie Crites<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Zach WIlson</p>
+<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Sara Cole<br>Sophie Crites<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
