--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5bl0RwMPBRvjHz04jI1E1v74cluzr5KSKKP8ENOwxzDP/vOvPmn+ug6gvzIxHCpO81JUwYJRaVQflJ242xWXT1wNYxJjVWPKgNWVtJ8Drq/A2ckCSYgKkkkqjva0VCuO">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="P7w5cqXbi1WtO/qH09vM6OrBBHGYl6NgoCmCbfjVA8VzHJZe0wKaxN9tFdd8rGFaVb4Q0qPJfirj2P7U2tW5r9J4mEuYX05p5oEoBYZm9ntGtWx2+PUHHNGF2qDZp60C">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
