--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -234,7 +234,7 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1-1036x691.jpg" alt="Mobirise" title="">
+                        <a href="products.html"><img src="assets/images/mbr-1-1036x691.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
@@ -246,7 +246,7 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/chairs-chalk-chalkboard-159844-1034x689.jpg" alt="Mobirise" title="">
+                        <a href="community.html"><img src="assets/images/chairs-chalk-chalkboard-159844-1034x689.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
@@ -260,7 +260,7 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1036x707.jpg" alt="Mobirise" title="">
+                        <a href="about.html"><img src="assets/images/mbr-1036x707.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
@@ -401,7 +401,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m9mMonF/A5Evl5xpvvpIGW9dFZMzdraPPTkXsVBYBnauZQqtCHK7WPWZug2AkWfX6AYMfgnPzCOF3z1Tq9czu0L+FwaJEiCpBzvhb3BN4botZTC6ddHOwm++JzIlRXzI">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nZq1lXBqrAfPVUf1udfQIyNStUzZSXo1KqW3GhnoP62l4j07h0ontTDsptgTPC/9/9xonYMhtMOQviIP67Wl3x4JCrO2y3An5UN6dtx2l/zKZyEo8k1AEFHxyJroiGHn">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
