create github pages

--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 45%;">
-                <img src="assets/images/sara-cole-2019-holly-clark-760x507.jpg" alt="Mobirise" title="">
+                <img src="assets/images/trenttonwortham-872x872.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,17 +182,15 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Sara Cole.
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to the first Barrett Insurance Student of the Week Award of Excellence recipient for 2020, Trenton Wortham!
+<br><br>Trenton is a senior at Hillsdale High School (HHS). He remains active in Interact Club, the Freshman Mentor Program as a mentor, and Business Professionals of America.  He is also a member of the HHS football, wrestling, and and track teams. Trenton works part-time at Wendys while also working at HHS Study Cup Coffee Shop, a program operated by Business Professionals of America. 
+<br><br>According to Math and Physical Education teacher, HHS Varsity Football Coach Marc Lemerand, “Trent is a hard working student-athlete that takes pride in his studies and athletic accomplishments. He takes college prep curricular classes and is serious about his studies. Trent exemplifies what it means to be a student-athlete.”
 <br>
-<br>Sara is a senior at Pittsford High School. She is a member of the National Honor Society and Crossroads Farm Youth Ministry. Sara also remains active on the volleyball, basketball, and softball teams.  
-<br><br>According to PHS Dean of Students, Holly Clark, “Sara Cole can brighten anyone's day with her positive attitude and radiant smile!  She strives to do her best in every area of her life.  When there is a need, she is the first to lend a helping hand.  She is a leader among her peers and a role model for the "Little Wildcats" of Pittsford Area Schools.  We are blessed to have her in our community!”
+<br>According to English and Health teacher, Amanda Waidely, "Trent has grit! He has a great attitude that attracts and influences others. Trent is a great role model!"
+<br><br>Trent is interested in working in business or in sports management promoting sports teams. He is in the process of choosing a college right now, taking time to consider his options, and to find the best fit for his interests. Trent has been accepted by multiple colleges including Grand Valley State University, Eastern Michigan University, Olivet College, and Saginaw Valley State University. He also has his fingers crossed as he waits on a decision from an additional though undisclosed college/university. 
 <br>
-<br>Upon graduation and completion of the Hillsdale County Early Middle College program, Sara plans to pursue a degree in Business at Siena Heights University.
-<br>
-<br>Congratulations, Sara!
-<br>
-<br>Keep up your great work.
-<br></p>
+<br>Congratulations, Trenton!
+Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -222,7 +220,7 @@
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
 <br>Adrianna Aemisegger<br>Alecia Hodge<br>Alexis Higgins<br>Allyson Rubley,  
-<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Sara Cole<br>Sophie Crites<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Zach WIlson</p>
+<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Sara Cole<br>Sophie Crites<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
