--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zBLjFxq0RM1b8flpKZGzYRenAsbH9+828ywGgdhGpAJqvpn+VFkeI9AisE0rN/QbCqsFigEZk8QtBsMMlzj3aXuLOkivHFson7mKw+U1AMF5pAtaLLjaLG1GElaz94Wj">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nJ/BRVLq1SMkIy/+X441jHc6AdvVJESLnllehpVvO6oaO9xzk5+b7rqjnta2EtdDAO1VV/3dFVULM/F2YpJoHM8H38IucyaIRKwSDZTxtWPPEUgwN4y8cYyPuh0ECSBk">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
