create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="V6/ptJojN7so8ntL/bURaXoau80K5FfypKklg+5kPA4aFf+K1WNOqF/qC1T9OC32kjWMVadm0w8rWtDes81Ke4rqU8KAPTV3cPUmwwwbh8RE13ejRl7/pJSNb3pgLFW3">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GmDdxQIEpEex0a6b2Yrz2sAnYFsteQuLCdUBg4q05iooZHxkdGFLxqwDlLzpSBxHDYggs9fjVddg4sjzjxe0CtVzBxFEaYFYpfTEWBKtA4vz222R0LXd1+9G6KEKo3vN">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
