--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="L8wbcEZJ+nZHNoGsG0xHR53JleATa0mJjtWEiFZbV3v8tQ3AV6YXFeLDfxZ6o61nVe/Z66375Ia7F7Pst5izuaJQg87R4DCITYCc3aBUVux5V71tAksZzMjwtxyqLa4x">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nDzYlmRjzXwlrNopdgH2R5zm9sN0UbYV1cv2M7v7RSiPHEwslQ7b0AxMf+sL0W0kpZidk58KMMBY0a/HyNX8JXSS0Iq25bxBTaIsF2GpoZVUz7yjrv5Y63/99VG1Sm9B">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
