--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -401,7 +401,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tLZec245ZNvrKi7JbSWnN48PT6NDqjJQLx/0RuuU7h6Xa86nrRVJK0xs3Li0Q2074dz2HewHJj185vMx7Yb1NFT0x5ANW1eTNWUzxKkG+fZvIZmOduBTx3APy6tswICL">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UtJVqhE9rBRjiXMNkTAePB8703ZbBPy+aONneyRs6mspo0DYKAjLPxXH1WidBb4VmJKVt/0wGTTeaZHQwKB8YV5+Pw/mLoDE7CRl85PGPKiEOeXUAqUEI4K2QQiXR06w">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
