--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RqbjPbC1a5H0JOgLeBGbVOJVvDNA8VrzuZmdWacQ0pymIAndcpXHmuJX3teaAX8axJcoKep+FUeap2+uQgakdii8HE8ocSSZuqS+gNi/Acn+Yc6nHycZKb6qrwwwwaPv">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1VhhrHkNTSXTXZg0RH+QEXZtLfnv0PJWx9aYYP0QOjRKKJV+xXwLZIVQW4vjc0MrMIxe9eVovXz+soss73FDs8xmZHouZNFDgli+IAoXyv6qaTish/v9/KOzvBudKI04">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
